# carwash_backend

./: .dockerignore  .env.exaple  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  readme
nginx/: Dockerfile  nginx.conf
src/booking/: models.py  serializers.py  urls.py  views.py
src/booking/migrations/: 0001_initial.py
src/carwash/: admin.py  asgi.py  models.py  paginations.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
src/carwash/migrations/: 0001_initial.py  0002_alter_carwash_rating.py  0002_rating_description.py  0003_branch_bodytypes.py  0003_rating.py  0004_carwash_image.py  0004_rename_rating_rating_rating_value.py  0005_alter_rating_carwash.py  0006_alter_carwash_name.py
src/services/: admin.py  models.py  serializers.py  urls.py  views.py
src/services/migrations/: 0001_initial.py  0002_bodytype.py
src/settings/: exceptions.py  permissions.py  settings.py  urls.py
src/users/: admin.py  models.py  serializers.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_name.py  0003_alter_user_phone_number.py
